grammar.js
    module: ($) => seq(optional($.version_declaration), choice($.main_module, $.library_module)), // 1
    version_declaration: ($) => seq('xquery', choice(seq('encoding', $.string_literal), seq('version', $.string_literal, optional(seq('encoding', $.string_literal)))), ';'), // 2
    library_module: ($) => seq($.module_declaration, $.prolog), // 4
    main_module: ($) => seq(optional($.prolog), $.query_body), // 3
    prolog: ($) => prec.right(choice(seq($._prolog_part_one, optional($._prolog_part_two)), seq(optional($._prolog_part_one), $._prolog_part_two))), // 6
    module_declaration: ($) => seq('module', $._namespace_define, field('uri', $.string_literal), ';'), // 5
    _namespace_define: ($) => seq('namespace', $._ncname, '='), // repeated seq
    _prolog_part_one: ($) => repeat1(seq(choice($.default_namespace_declaration, $._setter, $.namespace_declaration, $.module_import, $.schema_import), ';')), // 6
    _prolog_part_two: ($) => repeat1(seq(choice($.context_item_declaration, $.variable_declaration, $.function_declaration, $.option_declaration), ';')), // 6
    // separator: ';'  // 7
    boundary_space_declaration: ($) => seq('declare', 'boundary-space', choice('preserve', 'strip')),
    default_collation_declaration: ($) => seq('declare', 'default', 'collation', field('uri', $.string_literal)),
    base_uri_declaration: ($) => seq('declare', 'base-uri', field('uri', $.string_literal)),
    construction_declaration: ($) => seq('declare', 'construction', choice('preserve', 'strip')),
    ordering_mode_declaration: ($) => seq('declare', 'ordering', choice('ordered', 'unordered')),
    empty_order_declaration: ($) => seq('declare', 'default', 'order', 'empty', choice('greatest', 'least')),
    copy_namespaces_declaration: ($) => seq('declare', 'copy-namespaces', choice('preserve', 'no-preserve'), ',', choice('inherit', 'no-inherit')),
    decimal_format_declaration: ($) => prec.right(seq('declare', choice(seq('decimal-format', $._EQName), seq('default', 'decimal-format')), repeat($.df_property_define))),
    df_property_define: ($) =>
      seq(
        choice(
          'decimal-separator',
          'grouping-separator',
          'infinity',
          'minus-sign',
          'NaN',
          'percent',
          'per-mille',
          'zero-digit',
          'digit',
          'pattern-separator',
          'exponent-separator'
        ),
        '=',
        $.string_literal
      ),
    //choice(seq('decimal-format', field('name', $._EQName)), seq('default', 'decimal-format')), repeat(seq($._df_property_name, '=', $.string_literal))),
    schema_import: ($) =>
      seq('import', 'schema', optional($.schema_prefix), field('uri', $.string_literal), optional(seq('at', $.string_literal, repeat(seq(',', $.string_literal))))), // 21
    schema_prefix: ($) => choice($._namespace_define, seq('default', 'element', 'namespace')),
    module_import: ($) => seq('import', 'module', optional($._namespace_define), field('uri', $.string_literal), optional($.source_at)), // 23
    namespace_declaration: ($) => seq('declare', $._namespace_define, field('uri', $.string_literal)), // 24
    default_namespace_declaration: ($) => seq('declare', 'default', choice('element', 'function'), 'namespace', field('uri', $.string_literal)), // 25
    context_item_declaration: ($) =>
      seq('declare', 'context', 'item', optional($.type_declaration), choice(seq(':=', field('var_value', $._expr)), seq('external', optional(seq(':=', $._expr))))), // 31
    variable_declaration: ($) =>
      seq(
        'declare',
        repeat($.annotation),
        'variable',
        $.variable,
        optional($.type_declaration),
        choice(seq(':=', field('value', $._expr_single)), seq('external', optional(seq(':=', $._expr_single))))
      ), // 28
    function_declaration: ($) =>
      seq(
        'declare',
        repeat($.annotation),
        'function',
        $._EQName,
        '(',
        optional($.param_list),
        ')',
        optional(field('return_type', $.type_declaration)),
        field('body', choice($.enclosed_expr, 'external'))
      ), // 32
    param_list: ($) => seq($._param, repeat(seq(',', $._param))), // 33
    _param: ($) => seq('$', $._EQName, optional(field('param_type', $.type_declaration))), // 34
    option_declaration: ($) => seq('declare', 'option', field('name', $._EQName), field('value', $.string_literal)), // 37
    query_body: ($) => $._expr, // 38
    _expr: ($) => prec(1, seq($._expr_single, repeat(seq(',', $._expr_single)))), // 39
    _expr_single: ($) =>
      choice(
        $.flwor_expr, // 41          prec: 2
        $.quantified_expr, // 70     prec: 2
        $.switch_expr, // 71         prec: 2
        $.typeswitch_expr, //74      prec: 2
        $.if_expr, // 77             prec: 2
        $.try_catch_expr, // 78      prec: 2
        $.or_expr, // 83             prec: 3
        $.and_expr, // 84            prec: 4
        $.comparison_expr, // 85     prec: 5
        $.string_concat_expr, // 86  prec: 6
        $.range_expr, // 87          prec: 7
        $.additive_expr, // 88       prec: 8
        $.multiplicative_expr, // 89 prec: 9
        $.union_expr, // 90          prec: 10
        $.intersect_except_expr, //91 prec: 11
        $.instance_of_expr, // 92    prec: 12
        $.treat_expr, // 93          prec: 13
        $.castable_expr, // 94       prec: 14
        $.cast_expr, // 95           prec: 15
        $.arrow_expr, // 96          prec: 16
        $.unary_expr, //  97         prec: 17 '-' '+' arithmetic prefix right to left */
        $.bang_expr, //107           prec: 18
        seq($._postfix_expr, optional($.absolute_path_expr)),
        $.absolute_path_expr,
        $.rel_path_expr,
        $._primary_expr
        //$.qname
      ),
    quantified_expr: ($) =>
      prec(
        2,
        seq(
          choice('some', 'every'),
          field('quantifier', $.variable),
          optional($.type_declaration),
          'in',
          field('in_binding', seq($._expr_single, repeat(seq(',', $.variable, optional($.type_declaration), 'in', $._expr_single)))),
          'satisfies',
          field('satisfy_conditional', $._expr_single)
        )
      ), // 70
    switch_expr: ($) =>
      prec(
        2,
        seq(
          'switch',
          field('switch_operand', seq('(', $._expr, ')')),
          repeat1($.switch_clause),
          field('switch_default', seq('default', 'return', field('default_return', $._expr_single)))
        )
      ), // 71
    switch_clause: ($) => seq(repeat1(seq('case', field('case_operand', $._expr_single))), 'return', field('case_return', $._expr_single)), // 72
    if_expr: ($) => prec(2, seq('if', field('if_test', seq('(', $._expr, ')')), 'then', field('if_consequence', $._expr_single), 'else', field('if_alternative', $._expr_single))), // 77
    try_catch_expr: ($) => prec(2, seq($.try_clause, $.catch_clause)), // 78
    try_clause: ($) => seq('try', $.enclosed_expr), // 79
    catch_clause: ($) => seq('catch', $.catch_error_list, $.enclosed_expr), // 81
    catch_error_list: ($) => seq($.name_test, repeat(seq('|', $.name_test))), // 82
    and_expr: ($) => prec.left(4, seq(field('lhs', $._expr_single), 'and', field('rhs', $._expr_single))), // 84
    comparison_expr: ($) => prec.left(5, seq(field('lhs', $._expr_single), $._comparison_ops, field('rhs', $._expr_single))), // 85
    _comparison_ops: ($) => choice($._value_comp, $._general_comp, $._node_comp),
    string_concat_expr: ($) => prec.left(6, seq(field('lhs', $._expr_single), repeat1(seq('||', field('rhs', $._expr_single))))), // 86
    range_expr: ($) => prec.left(7, seq(field('lhs', $._expr_single), 'to', field('rhs', $._expr_single))), //87
    multiplicative_expr: ($) => prec.left(9, seq(field('lhs', $._expr_single), repeat1(seq(choice('*', 'div', 'idiv', 'mod'), field('rhs', $._expr_single))))),
    arrow_expr: ($) => prec.left(16, seq(field('expression_value', $._expr_single), repeat1(seq('=>', $.arrow_function)))), // 94
    arrow_function: ($) => seq(choice($._EQName, $.var_ref, $.parenthesized_expr), $.arg_list), // 127
    bang_expr: ($) => prec.left(18, seq(field('sequence', $._expr_single), repeat1(seq('!', field('dynamic_context', $._expr_single))))), // 107
    predicate: ($) => prec.left(20, seq('[', $._expr_single, ']')), // 124
    rel_path_expr: ($) => prec.left(19, seq($._step_expr, repeat(seq(choice('/', '//'), $._step_expr)))),
    _step_expr: ($) => prec.left(19, seq(choice($._postfix_expr, $._axis_step))),
    abbrev_forward_step: ($) => prec.right(seq(optional('@'), $._node_test)),
    _node_test: ($) => choice($.name_test, $._kind_test), // 118
    name_test: ($) => choice($._EQName, $.wildcard), //  199
    wildcard: ($) => choice('*', seq($._ncname, ':*'), seq('*:', $._ncname), seq($.braced_uri_literal, '*')), // 120
    direct_constructor: ($) => choice($.direct_element, $.direct_comment), //141
    direct_element: ($) => choice(seq($.start_tag, repeat($._direct_element_content), $.end_tag), $.empty_tag),
    _direct_element_content: ($) => choice($.direct_constructor, $._common_content, $._element_content_char),
    start_tag: ($) => seq('<', $._allowed_qnames, repeat($.direct_attribute), '>'),
    end_tag: ($) => seq('</', $._allowed_qnames, '>'),
    _literal: ($) => choice($._numeric_literal, $.string_literal),
    var_ref: ($) => seq('$', $._var_name), // 131
    parenthesized_expr: ($) => seq('(', optional($._expr), ')'), // 133
    arg_list: ($) => seq('(', optional(seq($._argument, repeat(seq(',', $._argument)))), ')'), // 122
    _argument: ($) => field('arg', choice($._expr_single, $.placeholder)),
    ordered_expr: ($) => seq('ordered', $.enclosed_expr), // 135
    unordered_expr: ($) => seq('unordered', $.enclosed_expr), // 136
    type_declaration: ($) => seq('as', $.sequence_type), // 183
    sequence_type: ($) => choice(seq('empty-sequence', '(', ')'), prec.right(seq($._item_type, optional($.occurrence_indicator)))), // 184
    _item_type: ($) =>
      choice(
        $._kind_test,
        $.any_item,
        $._func_test, // maps arrays are functions
        $.atomic_or_union_type,
        $.parenthesized_item_type // 216
      ), // 186
    occurrence_indicator: ($) => choice('?', '*', '+'), // 185
    atomic_or_union_type: ($) => $._EQName, // 187
    element_test: ($) => seq('element', seq('(', optional($.element_test_params), ')')), // 199
    element_test_params: ($) =>
      seq(field('name', choice(alias('*', $.wildcard), $._EQName)), optional(seq(',', field('type', seq($._EQName, optional(alias('?', $.occurrence_indicator))))))),
    // same as element but no nilled test as attributes don't have children
    annotation: ($) => seq('%', $._EQName, optional(seq('(', $._literal, repeat(seq(',', $._literal)), ')'))), // 27
    enclosed_expr: ($) => seq('{', optional($._expr), '}'), // 5
    string_literal: ($) => choice($._string_quote, $._string_apos),
    _string_quote: ($) => seq('"', repeat($._string_quote_content), '"'),
    _string_apos: ($) => seq("'", repeat($._string_apos_content), "'"),
    integer_literal: ($) => /\d+/,
    variable: ($) => seq('$', $._var_name),
    _var_name: ($) => $._EQName,
    _EQName: ($) => choice($._allowed_qnames, $.uri_qualified_name),
    //_QName: ($) => choice(field('unprefixed', $.identifier), seq(field('prefix', $.identifier), token.immediate(':'), field('local', $.identifier))),
    //_allowed_qnames: $  => prec.right(seq( $._ncname, optional(seq(':', $._ncname)))),
    _allowed_qnames: ($) => choice(field('ncname', $._ncname), seq(field('prefixed', $._ncname), token.immediate(':'), field('local', $._ncname))),
    _ncname: ($) => choice($.identifier, alias($._non_delimiting_word, $.identifier)),
    char_data: ($) => /[^\p{C}]/,
    // ^\p{C}  no invisible control characters and unused code points

    identifier: ($) => /[_\p{XID_Start}][-_\p{XID_Continue}]*/,
