test/corpus/misc.txt
==================
3.4 Sequence Expressions
==================

(10, 1 to 4)

---

(module
  (main_module
    (query_body
      (rel_path_expr
        (parenthesized_expr
          (rel_path_expr
            (integer_literal))
          (range_expr
            (rel_path_expr
              (integer_literal))
            (rel_path_expr
              (integer_literal))))))))

==================
3.5 Arithmetic Expressions
==================

 3 div 2

---

(module
  (main_module
    (query_body
      (multiplicative_expr
        (rel_path_expr
          (integer_literal))
        (rel_path_expr
          (integer_literal))))))

==================
3.6 String Concatenation Expressions
==================

"con" || "cat" || "enate"

---

(module
  (main_module
    (query_body
      (string_concat_expr
        (rel_path_expr
          (string_literal
            (char_data)))
        (string_concat_expr
          (rel_path_expr
            (string_literal
              (char_data)))
          (rel_path_expr
            (string_literal
              (char_data))))))))

==================
3.7 Comparison Expressions
==================

1 = 2

---

(module
  (main_module
    (query_body
      (comparison_expr
        (rel_path_expr
          (integer_literal))
        (rel_path_expr
          (integer_literal))))))

==================
3.8 Logical Expressions
==================

1 eq 1 and 2 eq 2

---

(module
  (main_module
    (query_body
      (and_expr
        (comparison_expr
          (rel_path_expr
            (integer_literal))
          (rel_path_expr
            (integer_literal)))
        (comparison_expr
          (rel_path_expr
            (integer_literal))
          (rel_path_expr
            (integer_literal)))))))

==================
3.13 Unordered Expression
==================

unordered { }

---

(module
  (main_module
    (query_body
      (rel_path_expr
        (unordered_expr
          (enclosed_expr))))))

==================
3.13 Ordered Expression
==================

ordered { }

---

(module
  (main_module
    (query_body
      (rel_path_expr
        (ordered_expr
          (enclosed_expr))))))

==================
3.14 Conditional Expressions
==================

if ( 'text' )
  then 'this'   
  else 'that'

---

(module
  (main_module
    (query_body
      (if_expr
        (rel_path_expr
          (string_literal
            (char_data)))
        (rel_path_expr
          (string_literal
            (char_data)))
        (rel_path_expr
          (string_literal
            (char_data)))))))

==================
3.14 Conditional:  main module with multiple if else
==================

if ( 'pigs walk on 4 legs' ) then 'good'  
else if ( 'pigs walk on 2 legs') then 'better' 
else 'pigs fly'

---

(module
  (main_module
    (query_body
      (if_expr
        (rel_path_expr
          (string_literal
            (char_data)))
        (rel_path_expr
          (string_literal
            (char_data)))
        (if_expr
          (rel_path_expr
            (string_literal
              (char_data)))
          (rel_path_expr
            (string_literal
              (char_data)))
          (rel_path_expr
            (string_literal
              (char_data))))))))

==================
3.15 Switch: main module with switch expr
==================

switch ( $animal )
   case "Cow" return "Moo"
   case "Cat" return "Meow"
   case "Duck" return "Quack"
   default return "What's that odd noise?"

---

(module
  (main_module
    (query_body
      (switch_expr
        (rel_path_expr
          (var_ref
            (identifier)))
        (switch_clause
          (rel_path_expr
            (string_literal
              (char_data)))
          (rel_path_expr
            (string_literal
              (char_data))))
        (switch_clause
          (rel_path_expr
            (string_literal
              (char_data)))
          (rel_path_expr
            (string_literal
              (char_data))))
        (switch_clause
          (rel_path_expr
            (string_literal
              (char_data)))
          (rel_path_expr
            (string_literal
              (char_data))))
        (rel_path_expr
          (string_literal
            (char_data)))))))

==================
3.16 Quantified Expressions
==================

some $foo in $baa satisfies $boo

---

(module
  (main_module
    (query_body
      (quantified_expr
        (variable
          (identifier))
        (rel_path_expr
          (var_ref
            (identifier)))
        (rel_path_expr
          (var_ref
            (identifier)))))))

==================
3.17 Try/Catch Expressions
==================

try { 
} 
catch * { 
}

---

(module
  (main_module
    (query_body
      (try_catch_expr
        (try_clause
          (enclosed_expr))
        (catch_clause
          (catch_error_list
            (name_test
              (wildcard)))
          (enclosed_expr))))))

==================
3.19 Simple map operator
==================

$emp ! ( $bang )

---

(module
  (main_module
    (query_body
      (bang_expr
        (rel_path_expr
          (var_ref
            (identifier)))
        (rel_path_expr
          (parenthesized_expr
            (rel_path_expr
              (var_ref
                (identifier)))))))))

==================
3.20 Arrow operator
==================

$string => upper-case()
-------------------

(module
  (main_module
    (query_body
      (arrow_expr
        (rel_path_expr
          (var_ref
            (identifier)))
        (arrow_function
          (identifier)
          (arg_list))))))
