test/corpus/postfix.txt
==================
3.2.1 Postfix Expressions - Filter Expressions
==================

$products[price gt 100]

---

(module
  (main_module
    (query_body
      (rel_path_expr
        (var_ref
          (identifier))
        (predicate
          (comparison_expr
            (rel_path_expr
              (abbrev_forward_step
                (name_test
                  (identifier))))
            (rel_path_expr
              (integer_literal))))))))

==================
3.2.2 Postfix Expressions - Dynamic Function Calls
==================

$f(2, 3)

---

(module
  (main_module
    (query_body
      (rel_path_expr
        (var_ref
          (identifier))
        (arg_list
          (rel_path_expr
            (integer_literal))
          (rel_path_expr
            (integer_literal)))))))
